--- a/views/edit.html
+++ b/views/edit.html
@@ -5,8 +5,8 @@
             <form class="col s12">
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="fieldProductName" type="text" class="validate">
-                        <label for="fieldProductName" class="active">Nom</label>
+                        <input id="fieldProductLabel" type="text" class="validate">
+                        <label for="fieldProductLabel" class="active">Nom</label>
                     </div>
                     <div class="input-field col s6">
                         <input id="fieldProductQuantity" type="number" class="validate">
